--- a/programs-collection/style.css
+++ b/programs-collection/style.css
@@ -14,43 +14,40 @@ a:hover {
 #head {
   text-align: center;
   background-color: rgb(200, 180, 90);
-  margin-top: 5vw;
-  margin-left: 18vw;
-  margin-right: 13vw;
-  margin-bottom: 8vw;
+  margin-top: 3%;
+  margin-left: 16%;
+  margin-right: 16%;
+  margin-bottom: 10%;
 }
 #title-text {
   font-family: sans-serif;
-  font-size: 8vw;
+  font-size: 4em;
 }
 
 .program-list-item {
-  margin: 16vw;
-  margin-top: 4vw;
-  margin-bottom: 4vw;
-  padding-left: 4vw;
-  padding-right: 4vw;
+  margin-top: 5%;
+  margin-left: 18%;
+  margin-right: 18%;
   text-align: center;
   background-color: rgb(140, 180, 160);
 }
 .program-name {
   color: rgb(200, 255, 200);
   font-family: sans-serif;
-  font-size: 4vw;
+  font-size: 2.5em;
 }
 .program-language {
   font-family: sans-serif;
-  font-size: 2vw;
-  margin-top: 0px;
-  margin-bottom: 1vw;
-  padding: 0px;
+  font-size: 1em;
+  margin-top: 1%;
+  margin-bottom: 2%;
 }
 .program-image {
-  width: 25vw;
+  width: 45%;
 }
 .program-description {
   font-family: sans-serif;
-  font-size: 1.5vw;
-  margin-top: 1vw;
-  padding-bottom: 0.5vw;
+  font-size: 1em;
+  margin-top: 2%;
+  padding-bottom: 1%;
 }
