--- a/programs-collection/style.css
+++ b/programs-collection/style.css
@@ -4,7 +4,7 @@ body {
 a:link {
   color: blue;
   text-decoration: none;
-  border-bottom: 0.3vw;
+  border-bottom: 1%;
 }
 a:hover {
  text-decoration: underline;
