--- a/bird-breaker/style.css
+++ b/bird-breaker/style.css
@@ -45,3 +45,8 @@ canvas {
   display: block;
   background-color: lightBlue;
 }
+
+#game-description {
+  width: 60%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
