--- a/gravity-pong/style.css
+++ b/gravity-pong/style.css
@@ -14,3 +14,8 @@ canvas {
   width: 60%;
   background-color: rgba(0, 0, 0, 0.2);
 }
+
+#game-controls {
+  width: 60%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
