--- a/gravity-pong/style.css
+++ b/gravity-pong/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 canvas {
+  position: absolute;
   cursor: none;
   padding: 0;
   margin: auto;
@@ -16,6 +17,6 @@ canvas {
 }
 
 #game-controls {
-  width: 60%;
+  width: 20%;
   background-color: rgba(0, 0, 0, 0.2);
 }
