--- a/academy/style.css
+++ b/academy/style.css
@@ -37,8 +37,8 @@
   font-size: 3vh;
   padding: 2.6vh;
   background-color: #f9f9f9;
-  box-shadow: 0vh 1.2vh 1.2vw 0.2vw rgba(0,0,0,0.2);
-  z-index: 1;
+  box-shadow: 0vh 0.8vh 1vw 0.4vh rgba(0,0,0,0.2);
+  z-index: 9;
 }
 
 #nav .dropdown-content a {
@@ -51,7 +51,7 @@
 }
 
 #nav .dropdown-content a:hover {
-  background-color: #f1f1f1
+  background-color: #f1f1f1;
 }
 
 #nav .dropdown:hover .dropdown-content {
@@ -88,4 +88,51 @@
 }
 .video-link:hover {
   text-decoration: none;
+}
+
+#video-popup {
+  display: none;
+  position: fixed;
+  text-align: center;
+  background-color: #d0d0d0;
+  margin-top: calc(50vh - 18vw - 5vh - 0.9vw);
+  margin-left: calc(50vw - 32vw - 2vh);
+  padding: 0vh 2vh 2vh 2vh; /* 1.8vw + 8vh top padding equivalent. */
+  box-shadow: 0vh 0.8vh 1vw 0.4vh rgba(0,0,0,0.3);
+  z-index: 999;
+}
+#video-player {
+  width: 64vw;
+  height: 36vw;
+}
+#video-info {
+  list-style-type: none;
+  font-size: 1.8vw;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  padding: 0;
+}
+#video-info p {
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+#video-info button {
+  font-size: 2vw;
+  width: 8vw;
+  height: 3vw;
+  margin-top: calc(2vh - 0.5vw);
+  margin-bottom: calc(2vh - 0.5vw);
+}
+#video-info li {
+  display: inline-block;
+}
+
+#greyout {
+  display: none;
+  position: fixed;
+  background-color: #000000b0;
+  margin: 0;
+  width: 110%;
+  height: 110%;
+  z-index: 99;
 }
