--- a/academy/style.css
+++ b/academy/style.css
@@ -131,6 +131,8 @@
   display: none;
   position: fixed;
   background-color: #000000b0;
+  top: 0;
+  left: 0;
   margin: 0;
   width: 100%;
   height: 100%;
