--- a/academy/style.css
+++ b/academy/style.css
@@ -95,8 +95,10 @@
   position: fixed;
   text-align: center;
   background-color: #d0d0d0;
-  margin-top: calc(50vh - 18vw - 5vh - 0.9vw);
-  margin-left: calc(50vw - 32vw - 2vh);
+  /* 50vh - 18vw - 5vh - 0.9vw */
+  margin-top: calc(45vh - 17.1vw);
+  /* 50vw - 32vw - 2vh */
+  margin-left: calc(18vw - 2vh);
   padding: 0vh 2vh 2vh 2vh; /* 1.8vw + 8vh top padding equivalent. */
   box-shadow: 0vh 0.8vh 1vw 0.4vh rgba(0,0,0,0.3);
   z-index: 999;
