--- a/academy/style.css
+++ b/academy/style.css
@@ -96,7 +96,7 @@
   text-align: center;
   background-color: #d0d0d0;
   /* 50vh - 18vw - 5vh - 0.9vw */
-  margin-top: calc(45vh - 17.1vw);
+  margin-top: calc(45vh - 18.9vwvw);
   /* 50vw - 32vw - 2vh */
   margin-left: calc(18vw - 2vh);
   padding: 0vh 2vh 2vh 2vh; /* 1.8vw + 8vh top padding equivalent. */
