--- a/academy/style.css
+++ b/academy/style.css
@@ -95,11 +95,11 @@
   position: fixed;
   text-align: center;
   background-color: #d0d0d0;
-  /* 50vh - 18vw - 5vh - 0.9vw */
-  margin-top: calc(45vh - 18.9vwvw);
+  /* 50vh - 18vw - 5vh - 1vw */
+  margin-top: calc(45vh - 19vw);
   /* 50vw - 32vw - 2vh */
   margin-left: calc(18vw - 2vh);
-  padding: 0vh 2vh 2vh 2vh; /* 1.8vw + 8vh top padding equivalent. */
+  padding: 0vh 2vh 2vh 2vh; /* 2vw + 8vh top padding equivalent. */
   box-shadow: 0vh 0.8vh 1vw 0.4vh rgba(0,0,0,0.3);
   z-index: 999;
 }
