--- a/base-styles.css
+++ b/base-styles.css
@@ -42,3 +42,70 @@
 .noListStyle {
   list-style: none;
 }
+
+* {
+  font-family: sans-serif;
+}
+
+#nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #d8d8d8;
+}
+
+#nav li {
+  float: right;
+}
+
+#nav li a {
+  display: inline-block;
+  color: #666666;
+  text-align: center;
+  font-size: 4vh;
+  padding: 3vh 3.4vw;
+  text-decoration: none;
+}
+
+#logo img {
+  margin: 1vh 2vh;
+  padding: 1vh;
+  height: 6vh;
+  background-color: #777777;
+}
+
+#nav li:not(#logo) a:hover, .dropdown:hover .dropbtn {
+  background-color: #ccf6ff;
+}
+
+#nav li.dropdown {
+  display: inline-block;
+}
+
+#nav .dropdown-content {
+  display: none;
+  position: absolute;
+  font-size: 3vh;
+  padding: 2.6vh;
+  background-color: #f9f9f9;
+  box-shadow: 0vh 0.8vh 1vw 0.4vh rgba(0,0,0,0.2);
+  z-index: 9;
+}
+
+#nav .dropdown-content a {
+  color: black;
+  font-size: 3vh;
+  padding: 2.6vh 2.4vh;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+#nav .dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+#nav .dropdown:hover .dropdown-content {
+  display: block;
+}
