Feathers on the homescreen; Color scheme tweaks.
The background of arongil.com now has a 3D animation running in the background. It slows the page down for sure, but it finally fills all the white space that used to live on the main page.

Changed the nav bar on the main site and in /academy to a light orange for better contrast.

--- a/academy/style.css
+++ b/academy/style.css
@@ -31,7 +31,7 @@
 }
 
 #nav li:not(#logo) a:hover, .dropdown:hover .dropbtn {
-  background-color: #ccf6ff;
+  background-color: #A3E4FC;
 }
 
 #nav li.dropdown {
