--- a/bird-breaker/style.css
+++ b/bird-breaker/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  overflow: hidden;
 }
 
 canvas {
@@ -10,6 +11,140 @@ canvas {
 }
 
 #game-description {
-  width: 60%;
+  width: 40%;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.xbig {
+  font-size: 3rem;
+}
+.big {
+  font-size: 2.2rem;
+}
+.medium {
+  font-size: 1.6rem;
+}
+.small {
+  font-size: 0.99rem;
+}
+.xsmall {
+  font-size: 0.6rem;
+}
+
+.center {
+  margin: auto;
+  text-align: center;
+}
+
+.red {
+  color: rgb(255, 70, 70);
+}
+.green {
+  color: rgb(60, 160, 20);
+}
+.blue {
+  color: rgb(100, 160, 255);
+}
+.black {
+  color: rgb(0, 0, 0);
+}
+.white {
+  color: rgb(240, 240, 240);
+}
+
+.arial {
+  font-family: "arial", serif;
+}
+
+.noListStyle {
+  list-style: none;
+}
+
+* {
+  font-family: sans-serif;
+}
+
+#nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #d8d8d8;
+}
+
+#nav li {
+  float: right;
+}
+
+#nav li a {
+  display: inline-block;
+  color: #666666;
+  text-align: center;
+  font-size: 4vh;
+  padding: 3vh 3.4vw;
+  text-decoration: none;
+}
+
+#logo img {
+  margin: 1vh 2vh;
+  padding: 1vh;
+  height: 6vh;
+  background-color: #777777;
+}
+
+#nav li:not(#logo) a:hover, .dropdown:hover .dropbtn {
+  background-color: #ccf6ff;
+}
+
+#nav li.dropdown {
+  display: inline-block;
+}
+
+#nav .dropdown-content {
+  display: none;
+  position: absolute;
+  font-size: 3vh;
+  padding: 2.6vh;
+  background-color: #f9f9f9;
+  box-shadow: 0vh 0.8vh 1vw 0.4vh rgba(0,0,0,0.2);
+  z-index: 9;
+}
+
+#nav .dropdown-content a {
+  color: black;
+  font-size: 3vh;
+  padding: 2.6vh 2.4vh;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+#nav .dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+#nav .dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.block {
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  padding-left: 6vw;
+  padding-right: 6vw;
+  margin-top: 2vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
+.block-header {
+  color: #202020;
+  text-align: center;
+  font-size: 6vh;
+}
+.topic-header {
+  color: #303030;
+  font-size: 4vh;
+  margin-bottom: 1vh;
+  margin-top: 4vh;
 }
