--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -1,20 +1,20 @@
 #board {
   border-collapse: collapse;
-  width: 80vh; 
-  height: 80vh;
+  width: 80svmin; 
+  height: 80svmin;
   margin: 0 auto;
-  font-size: 1rem;  
+  font-size: 1vmin;  
 }
 
 #board td {
-  border: 0.05rem solid black;
+  border: 0.2svmin solid black;
 }
 
 #board td input {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  font-size: 2rem;
+  font-size: 5vmin;
   text-align: center;
   border: none;
 }
@@ -22,61 +22,19 @@
 /* Grid borders */ 
 
 #board tr:nth-child(3n) td {
-  border-bottom: 0.1rem solid black; 
+  border-bottom: 0.4svmin solid black;
 }
 
 #board tr td:nth-child(3n) {
-  border-right: 0.1rem solid black;
+  border-right: 0.4svmin solid black;  
 }
 
 #board tr:nth-child(1) td {
-  border-top: 0.1rem solid black;  
+   border-top: 0.4svmin solid black;
 }
 
 #board td:first-child {
-  border-left: 0.1rem solid black;
-}
-
-/*
-#board {
-  border-collapse: collapse; 
-  width: 40%;
-  margin: 0 auto;
-  font-size: 1rem;
-}
-
-#board td {
-  padding-bottom: 5%;
-  padding-right: 5%;
-  border: 0.05rem solid black; 
-}
-
-#board td input {
-  box-sizing: border-box;
-  height: 100%;
-  width: 100%;
-  font-weight: bold;
-  font-size: 2rem;
-  text-align: center;
-  border: none;
-}
-
-/* Grid borders */ 
-
-#board tr:nth-child(3n) td {
-  border-bottom: 0.1rem solid black;
-}
-
-#board tr td:nth-child(3n) {
-  border-right: 0.1rem solid black;  
-}
-
-#board tr:nth-child(1) td {
-   border-top: 0.1rem solid black;
-}
-
-#board td:first-child {
-   border-left: 0.1rem solid black; 
+   border-left: 0.4svmin solid black; 
 }
 
 /* Nav */
@@ -87,37 +45,37 @@
 }
 
 #nav button {
-  padding: 0.5rem 1rem;  
-  margin-top: 0.4rem;
-  margin-bottom: 0.8rem;
+  padding: 1.2svmin 2.4svmin;  
+  margin-top: 1.0svmin;
+  margin-bottom: 2.0svmin;
 
   border: none;
-  border-radius: 0.25rem;
+  border-radius: 0.5vmin;
 
-  border-top-left-radius: 0.625rem;
-  border-bottom-left-radius: 0.625rem;  
-  border-top-right-radius: 0.625rem;
-  border-bottom-right-radius: 0.625rem;
+  border-top-left-radius: 1.2vmin;
+  border-bottom-left-radius: 1.2vmin;  
+  border-top-right-radius: 1.2vmin;
+  border-bottom-right-radius: 1.2vmin;
 
-  font-size: 1.125rem;
+  font-size: 2.6vmin;
   font-weight: bold;
   color: white;
    
   background: linear-gradient(to bottom,#4eb5e5 0%,#389ed5 100%);
-  box-shadow: 0px 0.125rem 0.1875rem rgba(0,0,0,0.3);
+  box-shadow: 0px 0.3svmin 0.4svmin rgba(0,0,0,0.3);
    
   cursor: pointer; 
   transition: all 0.15s ease;  
 }
 
 #nav button:hover {
-  transform: translateY(-0.125rem);
-  box-shadow: 0px 0.1875rem 0.375rem rgba(0,0,0,0.4);  
+  transform: translateY(-0.3svmin);
+  box-shadow: 0px 0.35svmin 0.7svmin rgba(0,0,0,0.4);  
 }
 
 #nav button:active {
   transform: translateY(0px);
-  box-shadow: 0px 0.0625rem 0.1875rem rgba(0,0,0,0.2);   
+  box-shadow: 0px 0.2svmin 0.5svmin rgba(0,0,0,0.2);   
 }
 
 /* Animated Text */
@@ -136,9 +94,9 @@
 .title-container {
   text-align: center;
   font-family: sans-serif;
-  font-size: 3rem;
+  font-size: 6svmin;
   font-weight: bold;
   color: lightgreen;
 
-  margin-top: 0.5rem;
+  margin-top: 1svmin;
 }
